fix button spacing on save

--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -31,6 +31,7 @@
 
 .modal-buttons {
   width: 100%;
+  min-width: 180px;
   margin: 20px 0;
   display: flex;
   justify-content: space-between;
